--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=http://localhost:5000
+VITE_API_BASE_URL=https://plumbgo-backend.onrender.com
 VITE_GOOGLE_CLIENT_ID=996527080538-77plbd85ja1vkpvf3bf1pe82mre5p79g.apps.googleusercontent.com
